feature: creado el endpoint para eliminar ventas
